# Web_scraping_for_public_toilets

./: .env.example  .gitignore  README.md  config.py  gmaps_selectors.py  main.py  models.py  pipeline.py  pyproject.toml  requirements.txt  test_viability.py
extractor/: __init__.py  anti_detect.py  auth.py  openrouter_filter.py  photo_scraper.py  review_scraper.py  search_scraper.py  utils.py
storage/: __init__.py  csv_exporter.py  sqlite_store.py
