[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aleessiaaaa"
version = "0.2.0"
description = "Google Maps restroom data extractor for Venice and Rome"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.45",
    "aiosqlite>=0.20",
    "pandas>=2.2",
    "pydantic>=2.7",
    "structlog>=24.1",
    "rich>=13.7",
    "httpx>=0.27",
    "python-slugify>=8",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
aleessiaaaa = "main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"